# ChangeLog for net-libs/net6
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/net6/ChangeLog,v 1.38 2010/06/13 09:37:25 xarthisius Exp $

*net6-1.3.12 (13 Jun 2010)

  13 Jun 2010; Kacper Kowalik <xarthisius@gentoo.org> +net6-1.3.12.ebuild:
  Version bump. Fixes bug 320725. Thanks Priit Laes <plaes@plaes.org> for
  the report

  13 Jun 2010; Kacper Kowalik <xarthisius@gentoo.org> metadata.xml:
  Add dev-zero and myself as maintainers

  22 May 2010; Torsten Veller <tove@gentoo.org> metadata.xml:
  Remove humpback from metadata.xml (#34793)

  26 Nov 2009; Víctor Ostorga <vostorga@gentoo.org> -net6-1.3.5.ebuild,
  -net6-1.3.8.ebuild:
  Cleaning out old versions

  23 Nov 2009; Markus Meier <maekke@gentoo.org> net6-1.3.9.ebuild:
  amd64/x86 stable, bug #291030

  01 Nov 2009; nixnut <nixnut@gentoo.org> net6-1.3.9.ebuild:
  ppc stable #291030

  28 Oct 2009; Víctor Ostorga <vostorga@gentoo.org> net6-1.3.9.ebuild,
  +files/net6-1.3.9-libgnutls.patch:
  Fixing build against >=net-libs/gnutls-2.7.1 bug #271989.
  Fixing broken pkg-config file, bug #271994
  Both patches thanks to Robert Marmorstein <rmmarm@sdf.lonestar.org> and
  Priit
  Laes <plaes@plaes.org> .

*net6-1.3.10 (28 Oct 2009)

  28 Oct 2009; Víctor Ostorga <vostorga@gentoo.org> +net6-1.3.10.ebuild:
  Version bump to 1.3.10 , bug #290349

  28 Oct 2009; Torsten Veller <tove@gentoo.org> metadata.xml:
  humpback is AWOL (#34793). Adding maintainer-needed

  02 Jul 2009; Jeroen Roovers <jer@gentoo.org> net6-1.3.9.ebuild:
  Stable for HPPA (for net-libs/obby).

*net6-1.3.9 (08 Apr 2009)

  08 Apr 2009; Tiziano Müller <dev-zero@gentoo.org> -net6-1.3.6.ebuild,
  +net6-1.3.9.ebuild:
  Version bump. Dropped old.

*net6-1.3.8 (07 Nov 2008)

  07 Nov 2008; Gustavo Felisberto <humpback@gentoo.org> +net6-1.3.8.ebuild:
  Bumped and added nls use flag. Credit goes to Daniel Pielmeier in bug
  #243440.
