@@ -1,12 +1,15 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/net6/net6-1.3.12.ebuild,v 1.1 2010/06/13 09:37:25 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/net6/net6-1.3.13.ebuild,v 1.1 2011/09/22 16:18:31 xarthisius Exp $
 
-EAPI="2"
+EAPI=4
+
+inherit multilib
 
 DESCRIPTION="Network access framework for IPv4/IPv6 written in C++"
 HOMEPAGE="http://gobby.0x539.de/"
 SRC_URI="http://releases.0x539.de/${PN}/${P}.tar.gz"
+
 LICENSE="LGPL-2.1"
 SLOT="0"
 KEYWORDS="~amd64 ~hppa ~ppc ~x86"
@@ -18,11 +21,14 @@ DEPEND="${RDEPEND}
 	>=dev-util/pkgconfig-0.20
 	nls? ( sys-devel/gettext )"
 
+DOCS=( AUTHORS ChangeLog NEWS README )
+
 src_configure() {
-	econf $(use_enable nls)
+	econf $(use_enable nls) \
+		--disable-static
 }
 
 src_install() {
-	emake DESTDIR="${D}" install || die "emake install failed"
-	dodoc AUTHORS ChangeLog NEWS README || die
+	default
+	rm -f "${D}"/usr/$(get_libdir)/${PN}.la
 }
