@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/net6
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/net6/ChangeLog,v 1.38 2010/06/13 09:37:25 xarthisius Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-libs/net6/ChangeLog,v 1.39 2011/09/22 16:18:31 xarthisius Exp $
+
+*net6-1.3.13 (22 Sep 2011)
+
+  22 Sep 2011; Kacper Kowalik <xarthisius@gentoo.org> -net6-1.3.10.ebuild,
+  -net6-1.3.12.ebuild, +net6-1.3.13.ebuild:
+  Version bump, EAPI4, remove la file and don't build static libs. Drop old
 
 *net6-1.3.12 (13 Jun 2010)
 
